--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,52 @@
   background-color: var(--appColor);
   display: flex;
   flex-direction: column;
-  gap: 6rem;
   overflow: hidden;
 }
 ::-webkit-scrollbar{
   display: none;
+}
+
+.stroke-text{
+    color: transparent;
+    font-family: Arial, Helvetica, sans-serif;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
+}
+
+.small-text-label{
+    font-size: 0.5rem;
+    padding: 0.3rem;
+}
+
+.text-label{
+    font-size: 0.7rem;
+}
+
+.medium-text-label{
+    font-size: 0.9rem;
+}
+
+
+.btn{
+    background-color: white;
+    padding: 0.5rem;
+    font-weight: bold;
+    border: 4px solid transparent;
+    transition: 300ms all;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn:hover{
+    cursor: pointer;
+}
+
+.blur{
+    background: rgba(253, 120, 43, 0.69);
+    position: absolute;
+    border-radius: 50%;
+    filter: blur(150px);
+    z-index: -9;
 }
